# PathBridger_GCRL

./: .gitignore  LICENSE  README.md  eval_checkpoint.py  main.py  pyproject.toml  requirements.txt  train_actor_spi.py
agents/: __init__.py  actor.py  critic.py  dynamics.py  goal_representation.py
config/: antmaze-giant-navigate.yaml  antmaze-large-navigate.yaml  antmaze-medium-navigate.yaml  cube-double-play.yaml  cube-single-play.yaml  cube-triple-play.yaml  puzzle-3x3-play.yaml  puzzle-4x4-play.yaml
config/ablation_cd_1m_best/: _manifest.txt  cd_1m_best_dedup_path_loss.yaml  cd_1m_best_no_subgoal_time_embedding.yaml  cd_1m_best_no_time_embedding.yaml
config/actor_spi/: actor_spi_default.yaml
rollout/: common.py  env.py  episode_runner.py  idm.py  manip_play_rollouts.py  manip_play_state_rollout.py  plot.py  run.py  subgoal.py  value_field.py
scripts/: __init__.py  eval_checkpoint.py  train_actor_spi.py
utils/: critic_sequence_dataset.py  datasets.py  dynamics.py  eval_results_io.py  flax_utils.py  freeze_check.py  goal_representation.py  log_utils.py  ogbench_eval_helpers.py  ogbench_eval_rollout.py  run_io.py  theta_schedules.py  trl_critic_config.py
