[project]
name = "pathbridger"
version = "0.1.0"
description = "Minimal production runtime for PathBridger offline goal-conditioned RL checkpoints."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "ogbench",
    "jax[cuda12] >= 0.4.26",
    "flax >= 0.8.4",
    "ml_collections",
    "pyyaml",
    "absl-py",
    "tqdm",
]

[project.optional-dependencies]
experiment = ["wandb"]
visualization = ["matplotlib", "imageio-ffmpeg", "moviepy", "pillow"]

[tool.ruff]
line-length = 120
target-version = "py39"
